spacing fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,7 @@ button {
     border: 2px solid #428bca;
     outline: none !important;
     padding-top: 0px;
-    padding-bottom: 3px;
+    padding-bottom: 2px;
 }
 
 .chessBox button {
@@ -218,6 +218,11 @@ hr {
     position: absolute;
     bottom: 10px;
     right: 10px;
+}
+
+#send {
+	position: relative;
+	top: -1px;
 }
 
 #resign {
